--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-461.8KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
-  - {name: 🇬🇧 英国-495.7KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.00MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-358.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 台湾-6.69MB/s(Youtube:不良林), server: 211.23.149.95, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-209.4KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.64MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw01.vsvideo.live, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-393.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-955.8KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇰🇷 韩国-2.02MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-821.3KB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 61c4c45e-d5c8-47ed-ae28-cee95f09b3b7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-550.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇯🇵 日本-1.20MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-315.2KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-955.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-550.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-955.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-550.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-955.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-550.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-955.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-550.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-955.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-550.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-955.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-550.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-461.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-495.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.00MB/s(Youtube:不良林)
-      - 🇫🇷 法国-358.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-6.69MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-209.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-955.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.40MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-821.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-550.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-315.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
