--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,79 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-859.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-256.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-462.7KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-942.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 捷克-367.4KB/s(Youtube:不良林), server: v2cross.com.01.v2ce.com, port: 443, type: trojan, password: mMQ6qJB9xbhiRvgg, sni: v2cross.com.01.v2ce.com, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-628.0KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-248.4KB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
+  - {name: 🇦🇺 澳大利亚-694.3KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-859.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-942.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 捷克-367.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-628.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-859.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-942.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 捷克-367.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-628.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-859.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-942.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 捷克-367.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-628.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-256.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-859.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-942.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 捷克-367.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-628.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-859.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-942.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 捷克-367.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-628.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-859.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-942.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 捷克-367.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-628.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-859.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇭🇰 香港-256.5KB/s(Youtube:不良林)
-      - 🇮🇳 印度-462.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 🇫🇷 法国-942.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 捷克-367.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-628.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-248.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-694.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
